# AEROPlusPlus

./: .gitignore  CMakeLists.txt  GuideAEROPlusPlus.html  README.md
.github/workflows/: ci.yml
AircraftSettings/: A320neo_aircraftSettings.xml  P2012_aircraftSettings.xml
ExcelFiles/: Test.xlsx
FuselagePreset/: .vsptime  A320neoFuselage.vsp3  AirbusGenericTransportJet.vsp3  BoeingGenericTransportJet.vsp3  DA42_Fuse_Skin.vsp3  J36_FuselageSkin_HQ.vsp3  MQ_20_FuselageBlendedEngineSkin.vsp3  MQ_20_FuselageSkin.vsp3  McDonnel_Duglas_FuselageSkin_Concept.vsp3  P2006T_Fuselage_Skin.vsp3  UAVDomeFuselagePreset.vsp3
NacellePreset/: .vsptime  GeneralTurboProp_Spec1.vsp3  GeneralTurboProp_Spec2.vsp3  GeneralTurbofan.vsp3
WeightsSettings/: P2012_weightsSettings.xml
include/: ATMOSISA.h  AircraftAlphaZeroAngleCalculator.h  AircraftData.h  BASEAIRCRAFTDATA.h  BASEWEIGHTDATA.h  BUILDAIRCRAFT.h  CD0Calculator.h  CDCalculator.h  COGCALCULATOR.h  COGCORRECTIONFACTORS.h  CONVFILEVSP.h  ChordCalculator.h  ControlSurfaceBuilder.h  ConvAngle.h  ConvArea.h  ConvDensity.h  ConvForce.h  ConvLength.h  ConvMass.h  ConvPower.h  ConvPressure.h  ConvVel.h  DELTAXANDDIAMETERS.h  DIRECTIONALSTABILITY.h  DegenGeomParser.h  DerivativesExcelWriter.h  ENGINEBASEDATA.h  ENGINEWEIGHTDATA.h  EQUALSIGNORECASE.h  EnumAREA.h  EnumAircraftCategory.h  EnumAircraftEngineCategory.h  EnumAircraftEngineType.h  EnumAngle.h  EnumDENSITY.h  EnumEnginePosition.h  EnumFORCE.h  EnumLENGTH.h  EnumMASS.h  EnumMaterial.h  (+53 more)
include/Eigen/: Dense
test/: A320Neo_Test.cpp  AircraftDataTest.cpp  PowerTestPropellerAircraft.cpp  RegressionTest.cpp  TestLaunchVSP.cpp  TestVSPCreator.cpp
tests/: RegressionTest.cpp
tools/: ColorPickerArtifact.html
